hphp/hack/test/typecheck/reified_generics/valid_targ_fun.php.exp
File "valid_targ_fun.php", line 6, characters 13-52:
This is a function type with variadic args, it cannot be used as a reified type argument (Typing[4305])
File "valid_targ_fun.php", line 3, characters 15-15:
T is reified
